[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pyWitness/_version.py"

[project]
name = "pyWitness"
description="Python utilities for eyewitness research"
authors = [{ name = "Laura Mickes", email = "laura.mickes@bristol.ac.uk"}]
dynamic = ["version"]
dependencies = ["ipython",
                "matplotlib",
		"numpy",
		"scipy",
		"pandas",
		"openpyxl",
		"xlrd",
		"pyreadstat"]
requires-python=">=3.6.8"

[project.optional-dependencies]
test = [
    "pytest",
]
