[build-system]
requires = ["toml","setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pyWitness/_version.py"

[project]
name = "pyWitness"
description="Python utilities for eyewitness research"
authors = [{ name = "Laura Mickes", email = "laura.mickes@bristol.ac.uk"}]
dynamic = ["version"]
dependencies = ["ipython",
                "matplotlib",
		"numpy",
		"scipy",
        "pandas>=1.5,<2.0; python_version < '3.9'",
        "pandas==2.3.3; python_version >= '3.9'",
		"openpyxl",
		"xlrd"]
# 		"pyreadstat"]
requires-python=">=3.6.8"

[project.optional-dependencies]
test = [
    "pytest",
]
